# back_end/v2/docs/swagger.json
@@ -228,9 +228,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "登录成功或失败",
+                        "description": "OK",
                         "schema": {
-                            "type": "msg"
+                            "$ref": "#/definitions/dto.EmployeeLoginResponse"
                         }
                     }
                 }
@@ -700,6 +700,41 @@
                     "items": {
                         "$ref": "#/definitions/models.Employee"
                     }
+                }
+            }
+        },
+        "dto.EmployeeLoginResponse": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "level": {
+                    "type": "integer"
+                },
+                "msg": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "salary": {
+                    "type": "number"
+                },
+                "tel": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
                 }
             }
         },
